--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   },
   "homepage": "https://github.com/pfarrell/bemused#readme",
   "dependencies": {
-    "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
-    "@babel/preset-react": "^7.27.1",
-    "babel-loader": "^10.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "webpack": "^5.99.9",
-    "webpack-cli": "^6.0.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/preset-react": "^7.27.1",
+    "babel-loader": "^10.0.0",
     "html-webpack-plugin": "^5.6.3",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   }
 }
